--- a/style.css
+++ b/style.css
@@ -137,24 +137,26 @@ a:hover {
 /* scroll top starts */
 #scroll-top {
   position: fixed;
-  bottom: -140%;
-  right: 1rem;
+  bottom: -8vh;
+  right: 2vh;
   padding: 0.6rem 1rem;
   font-size: 2rem;
   background: #00ff37;
   color: rgb(13, 0, 44);
   border-radius: 50%;
-  transition: 1s linear;
+  transition: 0.5s linear;
   z-index: 1000;
   text-decoration: none;
 }
+
+#scroll-top.active {
+  bottom:2vh;
+}
+
 #scroll-top:hover {
   -webkit-box-shadow: 0 0 10px 2px rgba(26, 1, 253, 0.42);
   -moz-box-shadow: 0 0 10px 2px rgba(26, 1, 253, 0.42);
   box-shadow: 0 0 10px 2px rgba(26, 1, 253, 0.42);
-}
-#scroll-top.active {
-  bottom: calc(100% - 36rem);
 }
 /* scroll top ends */
 
@@ -277,7 +279,7 @@ footer .content .media-icons a {
   border-color: #00ff37;
 }
 footer .bottom {
-  width: 100%;
+  width: auto;
   text-align: right;
   color: #d9d9d9;
   padding: 0 40px 5px 0;
